# SimpleOculusRift

./: .gitignore  CMakeLists.txt  README.md  buildLinux64.sh  buildOsx.sh  buildReleasePackage.sh  buildWin32.bat  buildWin64.bat  installLinux.sh  installOsx.sh  installWin.sh  setInstallNamesOsx.sh  setRpathsLinux64.sh
data/shaders/: ovrChromFragShader.glsl
include/: ContextWrapper.h  oculusRiftShaders.h
src/: ContextWrapper.cpp  SimpleOculusRiftMain.i  ocululsRiftShader.cpp
src/p5_src/: .directory  SimpleOculusRift.java
